[tool.poetry]
authors = ["Kile Deal <kile@kjdeal.dev>"]
description = ""
name = "ubiquitous-spoon"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.3"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
